apps/cluster-payload/gitlab/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab
  namespace: gitlab
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - gitlab.homelab.local
  rules:
    - backendRefs:
        - name: gitlab-webservice-default
          port: 8181
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gitlab-registry
  namespace: gitlab
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - registry.homelab.local
  rules:
    - backendRefs:
        - name: gitlab-registry
          port: 5000
